--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
   padding: 0 0;
   margin: 0 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: #D6DAE0;
 }
 
@@ -65,6 +65,13 @@
   height: 4vh;
   border-radius: 1vh;
   padding: 1vh 2vw 1vh 2vw;
+}
+
+.TaskDelete {
+  height: 24px;
+  width: 24px;
+  margin-left: 10px;
+  border-radius: 1vh;
 }
 
 button {
