--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  box-sizing: border-box;
+  padding: 0 0;
+  margin: 0 0;
+  height: 100%;
+  width: 100%;
+  background-color: #D6DAE0;
 }
 
 code {
